--- a/.github/CODEOWNERS
+++ b/.github/CODEOWNERS
@@ -5,7 +5,7 @@
 
 # These owners will be the default owners for everything in
 # the repo. Unless a later match takes precedence,
-*       @samajammin @ryancreatescopy @jjmstark @GeorgeTrotter
+*  @Lionsdenn77)(@akilhiriams1)
 
 # Owners of specific files
-/src/data/eth2-bounty-hunters.csv @lsankar4033 @djrtwo
+/src/data/eth2-bounty-hunter-lionsdenn77)(akilhiriams1@gmail.com
